--- a/platformio.ini
+++ b/platformio.ini
@@ -6,7 +6,8 @@
 ;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
+; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
 src_dir = .
 default_envs = arduino_uno
@@ -15,7 +16,8 @@ default_envs = arduino_uno
 platform = atmelavr
 board = uno
 framework = arduino
-;upload_port = /dev/cu.usbserial-01DAA363
-upload_port = /dev/cu.usbserial-14430
+upload_port = /dev/cu.usbserial-14130
 upload_speed = 115200
 monitor_speed = 115200
+lib_deps =
+	chris--a/Keypad@^3.1.1
