--- a/platformio.ini
+++ b/platformio.ini
@@ -21,4 +21,5 @@ upload_speed = 115200
 monitor_speed = 115200
 lib_deps =
   chris--a/Keypad@^3.1.1
+  waspinator/AccelStepper@^1.64
   olikraus/U8g2@^2.34.13
