added build config for arduino nano

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,14 +12,19 @@
 src_dir = .
 default_envs = arduino_uno
 
-[env:arduino_uno]
+[env]
 platform = atmelavr
-board = uno
 framework = arduino
-upload_port = /dev/cu.usbserial-14130
+upload_port = /dev/cu.usbserial-*
 upload_speed = 115200
 monitor_speed = 115200
 lib_deps =
   chris--a/Keypad@^3.1.1
   waspinator/AccelStepper@^1.64
   olikraus/U8g2@^2.34.13
+
+[env:arduino_uno]
+board = uno
+
+[env:arduino_nano]
+board = nanoatmega328
